--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,7 @@
     tools:context=".LoginActivity">
 
     <Button
+        android:id="@+id/button"
         android:text="@string/start"
         android:textSize="40sp"
         android:textColor="@android:color/white"
