--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -1,7 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              android:orientation="horizontal"
+              android:padding="16dp"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
 
+    <ImageView
+        android:layout_width="64dp"
+        android:layout_height="64dp"/>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:id="@+id/header"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"/>
+
+            <TextView
+                android:textSize="16sp"
+                android:layout_marginStart="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"/>
+
+            <TextView
+                android:textSize="16sp"
+                android:layout_marginStart="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <LinearLayout
+            android:id="@+id/bottom_bar"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/reply_button"
+                style="@style/IconActive"
+                android:background="@drawable/ic_reply_black_24dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"/>
+            <ImageView
+                android:id="@+id/retweet_button"
+                style="@style/IconActive"
+                android:layout_marginStart="24dp"
+                android:background="@drawable/ic_repeat_black_24dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"/>
+            <ImageView
+                android:id="@+id/star_button"
+                style="@style/IconActive"
+                android:layout_marginStart="24dp"
+                android:background="@drawable/ic_star_border_black_24dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"/>
+            <ImageView
+                android:id="@+id/more_button"
+                style="@style/IconActive"
+                android:layout_marginStart="24dp"
+                android:background="@drawable/ic_more_horiz_black_24dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"/>
+        </LinearLayout>
+
+    </LinearLayout>
 </LinearLayout>
