--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,12 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
+    <style name="IconActive">
+        <item name="android:alpha">0.54</item>
+    </style>
+
+    <style name="IconInActive">
+        <item name="android:alpha">0.26</item>
+    </style>
+
 </resources>
