--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -21,18 +21,21 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/user_name"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"/>
 
             <TextView
+                android:id="@+id/user_id"
                 android:textSize="16sp"
                 android:layout_marginStart="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"/>
 
             <TextView
+                android:id="@+id/date"
                 android:textSize="16sp"
                 android:layout_marginStart="10dp"
                 android:layout_width="wrap_content"
