--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,26 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".LoginActivity">
 
-    <!--<Button-->
-        <!--android:id="@+id/button"-->
-        <!--android:text="@string/start"-->
-        <!--android:textSize="40sp"-->
-        <!--android:textColor="@android:color/white"-->
-        <!--android:background="@color/colorAccent"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent" />-->
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <include
+            android:id="@+id/demo1"
+            layout="@layout/main_list_item" />
+
+        <include
+            android:id="@+id/demo2"
+            layout="@layout/main_list_item" />
+
+        <include
+            android:id="@+id/demo3"
+            layout="@layout/main_list_item" />
+
+        <include
+            android:id="@+id/demo4"
+            layout="@layout/main_list_item" />
+
+        <include
+            android:id="@+id/demo5"
+            layout="@layout/main_list_item" />
+
+        <include
+            android:id="@+id/demo6"
+            layout="@layout/main_list_item" />
+    </LinearLayout>
+
+    <View
+        android:background="#E6000000"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <com.twitter.sdk.android.core.identity.TwitterLoginButton
         android:id="@+id/twitter_login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_gravity="center" />
 
-</android.support.design.widget.CoordinatorLayout>
+</FrameLayout>
