--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -11,37 +11,34 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <LinearLayout
+        <FrameLayout
             android:id="@+id/header"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/user_name"
-                android:textStyle="bold"
                 android:textSize="16sp"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
-
-            <TextView
-                android:id="@+id/user_id"
-                android:textSize="16sp"
-                android:layout_marginStart="10dp"
-                android:layout_width="wrap_content"
+                android:layout_marginEnd="60dp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
             <TextView
                 android:id="@+id/date"
-                android:textSize="16sp"
+                android:text="12月12日"
+                android:textSize="14sp"
+                android:layout_gravity="end"
+                android:gravity="end"
                 android:layout_marginStart="10dp"
-                android:layout_width="wrap_content"
+                android:layout_width="60dp"
                 android:layout_height="match_parent"/>
 
-        </LinearLayout>
+        </FrameLayout>
 
         <TextView
             android:id="@+id/content"
