--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -50,35 +50,61 @@
         <LinearLayout
             android:id="@+id/bottom_bar"
             android:orientation="horizontal"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/reply_button"
-                style="@style/IconActive"
-                android:background="@drawable/ic_reply_black_24dp"
-                android:layout_width="24dp"
-                android:layout_height="24dp"/>
-            <ImageView
-                android:id="@+id/retweet_button"
-                style="@style/IconActive"
-                android:layout_marginStart="24dp"
-                android:background="@drawable/ic_repeat_black_24dp"
-                android:layout_width="24dp"
-                android:layout_height="24dp"/>
-            <ImageView
-                android:id="@+id/star_button"
-                style="@style/IconActive"
-                android:layout_marginStart="24dp"
-                android:background="@drawable/ic_star_border_black_24dp"
-                android:layout_width="24dp"
-                android:layout_height="24dp"/>
-            <ImageView
-                android:id="@+id/more_button"
-                style="@style/IconActive"
-                android:layout_marginStart="24dp"
-                android:background="@drawable/ic_more_horiz_black_24dp"
-                android:layout_width="24dp"
-                android:layout_height="24dp"/>
+            <LinearLayout
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:layout_width="0dp"
+                android:layout_height="24dp">
+                <ImageView
+                    android:id="@+id/reply_button"
+                    style="@style/IconActive"
+                    android:background="@drawable/ic_reply_black_24dp"
+                    android:layout_width="24dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_height="match_parent"/>
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:layout_width="0dp"
+                android:layout_height="24dp">
+                <ImageView
+                    android:id="@+id/retweet_button"
+                    style="@style/IconActive"
+                    android:background="@drawable/ic_repeat_black_24dp"
+                    android:layout_width="24dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_height="match_parent"/>
+                <TextView
+                    android:id="@+id/retweet_text_view"
+                    android:gravity="bottom"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:layout_width="0dp"
+                android:layout_height="24dp">
+                <ImageView
+                    android:id="@+id/favorite_button"
+                    style="@style/IconActive"
+                    android:background="@drawable/ic_star_border_black_24dp"
+                    android:layout_width="24dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_height="match_parent"/>
+                <TextView
+                    android:id="@+id/favorite_text_view"
+                    android:text="10000"
+                    android:gravity="bottom"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
