--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:background="@android:color/white"
               android:orientation="horizontal"
-              android:padding="16dp"
+              android:paddingTop="16dp"
+              android:paddingRight="16dp"
+              android:paddingLeft="16dp"
+              android:paddingBottom="3dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
@@ -42,8 +46,8 @@
 
         <TextView
             android:id="@+id/content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -106,6 +110,5 @@
                     android:layout_height="match_parent"/>
             </LinearLayout>
         </LinearLayout>
-
     </LinearLayout>
 </LinearLayout>
