--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -64,7 +64,7 @@
                 <ImageView
                     android:id="@+id/reply_button"
                     style="@style/IconActive"
-                    android:background="@drawable/ic_reply_black_24dp"
+                    android:src="@drawable/ic_reply_black_24dp"
                     android:layout_width="24dp"
                     android:layout_marginEnd="2dp"
                     android:layout_height="match_parent"/>
@@ -80,7 +80,7 @@
                 <ImageView
                     android:id="@+id/retweet_button"
                     style="@style/IconActive"
-                    android:background="@drawable/ic_repeat_black_24dp"
+                    android:src="@drawable/ic_repeat_black_24dp"
                     android:layout_width="24dp"
                     android:layout_marginEnd="2dp"
                     android:layout_height="match_parent"/>
@@ -98,7 +98,7 @@
                 <ImageView
                     android:id="@+id/favorite_button"
                     style="@style/IconActive"
-                    android:background="@drawable/ic_star_border_black_24dp"
+                    android:src="@drawable/favorite_star"
                     android:layout_width="24dp"
                     android:layout_marginEnd="2dp"
                     android:layout_height="match_parent"/>
