set gravity to edittext

--- a/app/src/main/res/layout/content_post.xml
+++ b/app/src/main/res/layout/content_post.xml
@@ -15,6 +15,7 @@
 
     <EditText
         android:id="@+id/edit_text"
+        android:gravity="top"
         android:layout_marginBottom="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
