--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -51,6 +51,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+        <jp.cordea.switter.TimelineImageView
+            android:id="@+id/timeline_image_view"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        </jp.cordea.switter.TimelineImageView>
+
         <LinearLayout
             android:id="@+id/bottom_bar"
             android:orientation="horizontal"
