--- a/app/src/main/res/layout/view_timeline_image.xml
+++ b/app/src/main/res/layout/view_timeline_image.xml
@@ -13,12 +13,14 @@
 
         <ImageView
             android:layout_weight="1"
+            android:scaleType="centerCrop"
             android:id="@+id/image_view_start_top"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <ImageView
             android:layout_weight="1"
+            android:scaleType="centerCrop"
             android:id="@+id/image_view_start_bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -34,12 +36,14 @@
 
         <ImageView
             android:layout_weight="1"
+            android:scaleType="centerCrop"
             android:id="@+id/image_view_end_top"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <ImageView
             android:layout_weight="1"
+            android:scaleType="centerCrop"
             android:id="@+id/image_view_end_bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
