--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:background="@android:color/white"
               android:orientation="horizontal"
-              android:paddingTop="16dp"
-              android:paddingRight="16dp"
-              android:paddingLeft="16dp"
-              android:paddingBottom="3dp"
+              android:paddingTop="@dimen/main_list_top_padding"
+              android:paddingRight="@dimen/main_list_horizontal_padding"
+              android:paddingLeft="@dimen/main_list_horizontal_padding"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
@@ -28,6 +28,7 @@
             <TextView
                 android:id="@+id/user_name"
                 android:layout_marginEnd="@dimen/tweet_post_date_width"
+                android:textSize="@dimen/main_list_common_text_size"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:layout_width="match_parent"
@@ -46,21 +47,24 @@
 
         <TextView
             android:id="@+id/content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:textSize="@dimen/main_list_common_text_size"
+            android:layout_marginTop="@dimen/main_list_content_top_margin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <jp.cordea.switter.TimelineImageView
             android:id="@+id/timeline_image_view"
             android:visibility="gone"
+            android:layout_marginTop="@dimen/main_list_timeline_image_top_margin"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="@dimen/main_list_timeline_image_height">
 
         </jp.cordea.switter.TimelineImageView>
 
         <LinearLayout
             android:id="@+id/bottom_bar"
+            android:layout_marginTop="@dimen/main_list_bottom_bar_vertical_margin"
+            android:layout_marginBottom="@dimen/main_list_bottom_bar_vertical_margin"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
