--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,14 @@
     <dimen name="user_id_text_size">14sp</dimen>
 
     <dimen name="user_thumbnail_round">2dp</dimen>
-    <dimen name="user_thumbnail_end_margin">10dp</dimen>
+    <dimen name="user_thumbnail_end_margin">14dp</dimen>
     <dimen name="user_thumbnail_size">56dp</dimen>
+
+    <dimen name="main_list_common_text_size">15sp</dimen>
+    <dimen name="main_list_top_padding">13dp</dimen>
+    <dimen name="main_list_horizontal_padding">12dp</dimen>
+    <dimen name="main_list_content_top_margin">6dp</dimen>
+    <dimen name="main_list_timeline_image_height">167dp</dimen>
+    <dimen name="main_list_timeline_image_top_margin">10dp</dimen>
+    <dimen name="main_list_bottom_bar_vertical_margin">10dp</dimen>
 </resources>
