--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -2,12 +2,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:background="@android:color/white"
-              android:orientation="horizontal"
+              android:orientation="vertical"
               android:paddingTop="@dimen/main_list_top_padding"
               android:paddingRight="@dimen/main_list_horizontal_padding"
               android:paddingLeft="@dimen/main_list_horizontal_padding"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:id="@+id/retweet_notify_container"
+        android:orientation="horizontal"
+        android:layout_marginStart="@dimen/main_list_retweet_notify_start_margin"
+        android:layout_marginBottom="@dimen/main_list_retweet_notify_bottom_margin"
+        android:gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:src="@drawable/ic_repeat_black_24dp"
+            android:layout_marginEnd="@dimen/main_list_retweet_notify_icon_end_margin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/retweet_notify_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/user_thumbnail"
@@ -122,5 +148,6 @@
                     android:layout_height="match_parent"/>
             </LinearLayout>
         </LinearLayout>
+    </LinearLayout>
     </LinearLayout>
 </LinearLayout>
