--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,9 @@
 
     <dimen name="main_list_common_text_size">15sp</dimen>
     <dimen name="main_list_top_padding">13dp</dimen>
+    <dimen name="main_list_retweet_notify_start_margin">32dp</dimen>
+    <dimen name="main_list_retweet_notify_icon_end_margin">9dp</dimen>
+    <dimen name="main_list_retweet_notify_bottom_margin">9dp</dimen>
     <dimen name="main_list_horizontal_padding">12dp</dimen>
     <dimen name="main_list_content_top_margin">6dp</dimen>
     <dimen name="main_list_timeline_image_height">167dp</dimen>
