--- a/app/src/main/res/layout/content_post.xml
+++ b/app/src/main/res/layout/content_post.xml
@@ -20,4 +20,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <LinearLayout
+        android:id="@+id/retweet"
+        android:visibility="gone"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="?attr/actionBarSize"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_marginEnd="@dimen/tweet_post_date_width"
+            android:textSize="@dimen/main_list_common_text_size"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/content"
+            android:textSize="@dimen/main_list_common_text_size"
+            android:layout_marginTop="@dimen/main_list_content_top_margin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
 </RelativeLayout>
