--- a/app/src/main/res/layout/main_list_last_item.xml
+++ b/app/src/main/res/layout/main_list_last_item.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
+              android:background="@android:color/white"
               android:layout_height="wrap_content">
 
-    <TextView
-        android:textSize="20sp"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="56dp">
 
-</LinearLayout>
+        <TextView
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/load_more"
+            android:textSize="16sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </FrameLayout>
+
+</FrameLayout>
